2017-04-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amjson.c: New generic json parser
	* common-src/amjson.h: Add json parser prototypes
	* common-src/Makefile.am (libamanda_la_SOURCES): Add amjson.c
	* common-src/Makefile.am (noinst_HEADERS): Add amjson.h
	* device-src/s3.c (get_openstack_swift_api_v2_setting):Send json
	  requestand parse json result

2017-04-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway
	* perl/Amanda/Interactivity/email.pm: Improve Interactivity

2017-04-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway
	* perl/Amanda/Interactivity/tty_email.pm: Fix NAME description

2017-04-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway
	* man/xml-source/amadmin.8.xml: Add config command
	* man/xml-source/amanda.conf.5.xml (seealso): Add ref to amadmin
	* man/xml-source/amgetconf.8.xml (seealso): Add ref to amadmin

2017-03-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/ndmp-device.c (write_from_connection_impl,
	  read_to_connection_impl): Do not overflow length

2017-03-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Label.pm: Check if label match labelstr
	* installcheck/amlabel.pl: Fix

2017-03-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Tapelist.swg: Fix not adding label to tapleist file when
	  creating it

2017-03-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/file.c: Fix crash if read return -1

2017-03-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/amgetconf.pl: Fix for visible/hidden
	* perl/Amanda/Service/Amidxtaped.pm: Wait to load the config before
	  doing some setting
	* server-src/logfile.c: Abort on ENOENT error

2017-03-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Curinfo/Info.pm: Fix writting the stats line

2017-03-15  Jean-Louis Martineau <JMartineau@carbonite.com>